2013-07-06  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/cifframe.m: Fix possible incorrect free of non-malloc'ed
	memory.
	* Source/NSHost.m: fix uninitialised data warning
	* Source/NSMethodSignature.m: fix uninitialised variable
	* Source/NSPropertyList.m: avoid static analyser warning
	* Tools/gdomap.c: fix uninitialised data warning
	* Source/NSObject.m: fixup error in alignment calculation;
	was assuming that the alignment of a double would do but that's
	not good enough. On GCC we use the __BIGGEST_ALIGNMENT__ used on
	the machine, but clang has no support for that, so if it's not
	defined we now guess 16 rather than __alignof__(double).

2013-07-05  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/NSObject.m: Fix error creating instasnce when using the
        objc2 runtime and garbage collection.
        * Source/ObjectiveC2/runtime.c: implement class_createInstance()
        by calling NSAllocateObject() .. perhaps it should be the other
        way round though.
        configure.ac: Fix directory order error.
        configure: regenerate

2013-07-05  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/GNUstepBase/GSTypeEncoding.h
	Include objc.h otherwise __GNU_LIBOBJC__ isn't defined.

2013-07-04  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSSocksParser/GSSocksParser.h:
	* Source/GSSocksParser/GSSocksParserPrivate.m:
	* Source/GSSocksParser/GSSocks4Parser.m:
	* Source/GSSocksParser/GSSocks5Parser.m:
	More portability fixes ... this time for mswindows.

2013-07-04  Ibadinov Marat <ibadinov@me.com>

        * GSSocksParser/GSSocks5Parser.m:
        * GSSocksParser/GSSocks5Parser.h:
        * GSSocksParser/GSSocksParserPrivate.h:
        * GSSocksParser/GSSocksParser.m:
        * GSSocksParser/GSSocksParserPrivate.m:
        * GSSocksParser/GSSocksParser.h:
        * GSSocksParser/GSSocks4Parser.m:
        * GSSocksParser/GSSocks4Parser.h:
        Parsing code for SOCKS versions 4 and 5.
